ta funcionando hein

--- a/views/graph.ejs
+++ b/views/graph.ejs
@@ -1,6 +1,7 @@
 <%- include("header") -%>
 
      <!--Header-->
-    <p>OIOPEPODJEWOFNSJDDL</p>     
+    <p>OIOPEPODJEWOFNSJDDL</p>    
+    <canvas>lalal</canvas> 
 <%- include("footer") -%>
  
