--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -3,8 +3,7 @@
             <div class="row">
                 <div class="col-12" id="footer-area">
                     <nav class="nav nav-pills flex-column flex-sm-row active">
-                        <a class="flex-sm-fill text-center nav-link" id="name-footer" href="index.html">MyConsumption.io</a>
-                        <a class="flex-sm-fill text-center nav-link" id="middlename-footer" href="index.html">lalala</a>
+                        <a class="flex-sm-fill text-center nav-link" id="name-footer">MyConsumption.io</a>
                         <span id="year">@2022</span>
                     </nav>
                 </div>
